3 dots icon added and styles fixed

--- a/index.html
+++ b/index.html
@@ -103,7 +103,12 @@
               <div class="circle-blank-border-mist cir-overlap--bot"></div>
               <div class="circle-blank-border-mist cir-overlap--top"></div>
             </div>
-            <div class="file-options-vertical"></div>
+            <div class="file-options-vertical">
+              <img
+                src="icons/three-dots-vertical.svg"
+                alt="3 dots horizontal"
+              />
+            </div>
             <div class="file-name">App Project</div>
             <div class="file-creation">Created: 20.02.2020</div>
           </div>
@@ -117,7 +122,12 @@
               <div class="circle-blank-border-mist cir-overlap--bot"></div>
               <div class="circle-blank-border-mist cir-overlap--top"></div>
             </div>
-            <div class="file-options-vertical"></div>
+            <div class="file-options-vertical">
+              <img
+                src="icons/three-dots-vertical.svg"
+                alt="3 dots horizontal"
+              />
+            </div>
             <div class="file-name">Project: fitbit</div>
             <div class="file-creation">Created: 28.02.2020</div>
           </div>
@@ -132,7 +142,12 @@
               <div class="circle-blank-border-mist cir-overlap--bot"></div>
               <div class="circle-blank-border-mist cir-overlap--top">+3</div>
             </div>
-            <div class="file-options-vertical"></div>
+            <div class="file-options-vertical">
+              <img
+                src="icons/three-dots-vertical.svg"
+                alt="3 dots horizontal"
+              />
+            </div>
             <div class="file-name">Client Documents</div>
             <div class="file-creation">Created: 4.03.2020</div>
           </div>
@@ -156,39 +171,55 @@
           <tbody>
             <tr>
               <td>
-                <div class="squircle-orange"></div>
-                <span>Travel Landing Page</span>
+                <div class="files-table--file-name">
+                  <div class="squircle-orange"></div>
+                  <span>Travel Landing Page</span>
+                </div>
               </td>
               <td>5 members</td>
               <td>Mar 8, 2020</td>
-              <td class="file-options-horizontal">...</td>
+              <td>
+                <img src="icons/three-dots.svg" alt="3 dots horizontal" />
+              </td>
             </tr>
             <tr>
               <td>
-                <div class="squircle-green"></div>
-                <span>True Photos</span>
+                <div class="files-table--file-name">
+                  <div class="squircle-green"></div>
+                  <span>True Photos</span>
+                </div>
               </td>
               <td>12 members</td>
               <td>Mar 8, 2020</td>
-              <td class="file-options-horizontal">...</td>
+              <td>
+                <img src="icons/three-dots.svg" alt="3 dots horizontal" />
+              </td>
             </tr>
             <tr>
               <td>
-                <div class="squircle-red"></div>
-                <span>Dashboard Structure</span>
+                <div class="files-table--file-name">
+                  <div class="squircle-red"></div>
+                  <span>Dashboard Structure</span>
+                </div>
               </td>
               <td>10 members</td>
               <td>Mar 9, 2020</td>
-              <td class="file-options-horizontal">...</td>
+              <td>
+                <img src="icons/three-dots.svg" alt="3 dots horizontal" />
+              </td>
             </tr>
             <tr>
               <td>
-                <div class="squircle-orange"></div>
-                <span>Character Illustration</span>
+                <div class="files-table--file-name">
+                  <div class="squircle-orange"></div>
+                  <span>Character Illustration</span>
+                </div>
               </td>
               <td>3 members</td>
               <td>Mar 10, 2020</td>
-              <td class="file-options-horizontal">...</td>
+              <td>
+                <img src="icons/three-dots.svg" alt="3 dots horizontal" />
+              </td>
             </tr>
           </tbody>
         </table>
