general styles updated

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                     r="15.91549430918954"
                     fill="transparent"
                     stroke="#4ac29d"
-                    stroke-width="3"
+                    stroke-width="2"
                     stroke-linecap="round"
                     stroke-dasharray="5 95"
                     stroke-dashoffset="20"
@@ -373,7 +373,7 @@
                     r="15.91549430918954"
                     fill="transparent"
                     stroke="#ff9f00"
-                    stroke-width="3"
+                    stroke-width="2"
                     stroke-linecap="round"
                     stroke-dasharray="35 65"
                     stroke-dashoffset="110"
@@ -385,7 +385,7 @@
                     r="15.91549430918954"
                     fill="transparent"
                     stroke="#a6aabb"
-                    stroke-width="3"
+                    stroke-width="2"
                     stroke-linecap="round"
                     stroke-dasharray="15 85"
                     stroke-dashoffset="70"
@@ -397,7 +397,7 @@
                     r="15.91549430918954"
                     fill="transparent"
                     stroke="#689ff8"
-                    stroke-width="3"
+                    stroke-width="2"
                     stroke-linecap="round"
                     stroke-dasharray="25 75"
                     stroke-dashoffset="50"
@@ -410,7 +410,7 @@
               </div>
             </div>
 
-            <span class="storage-table-files">420.2 GB of 500 GB used</span>
+            <span class="storage-table-files">420.2 GB of 500 GB</span>
           </div>
 
           <table class="storage-table">
@@ -471,7 +471,7 @@
         <div class="premium">
           <div class="premium-container">
             <div class="premium-logo"></div>
-            <span>Buy more space now!</span>
+            <span class="premium-text">Buy more space now!</span>
             <span class="storage-table-files">Upgrade to cloud premium</span>
             <span class="button-orange">Upgrade Account!</span>
           </div>
