Grid style updated

--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
 
         <div class="options">
           <div class="button-orange options-btn">
-            <div class="btn-add">
-              <img src="icons/Plus.svg" alt="3 dots vertical" />
-            </div>
+            <img src="icons/Plus.svg" alt="add button" />
             <span class="btn-text">Create New</span>
 
             <div class="tooltip">
