Grid and styles updated

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <!-- Recent Files -->
         <div class="subtitle">
           <span class="subtitle-text">Recent Files</span>
-          <span class="subtitle-more">View All</span>
+          <span class="subtitle-more">View all</span>
         </div>
 
         <table class="files-table">
@@ -250,7 +250,7 @@
         <!-- Shared With Me -->
         <div class="subtitle">
           <span class="subtitle-text">Shared with me</span>
-          <span class="subtitle-more">View All</span>
+          <span class="subtitle-more">View all</span>
         </div>
 
         <div class="files-row">
@@ -408,7 +408,7 @@
               </div>
             </div>
 
-            <span class="storage-table-files">420.2 GB of 500 GB</span>
+            <span class="storage-used">420.2 GB of 500 GB</span>
           </div>
 
           <table class="storage-table">
@@ -470,8 +470,8 @@
           <div class="premium-container">
             <div class="premium-logo"></div>
             <span class="premium-text">Buy more space now!</span>
-            <span class="storage-table-files">Upgrade to cloud premium</span>
-            <span class="button-orange">Upgrade Account!</span>
+            <span class="storage-used">Upgrade to cloud premium</span>
+            <span class="button-orange">Upgrade account</span>
           </div>
         </div>
       </div>
